style.css
/* CSS reset */
body,ul,li,h1,h2,a{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif
}

/* 
    Nav bar 
    Bar will be on top for smaller devices, and side for larger.
*/
.mainNav{
    background-color: #1e0a77;    
}
.mainNavUL{
    /* Remove ul buttons */
    list-style-type: none;
    text-align: center;
    padding: 16px;
    margin: 0 auto;
}
.navListItem{
    padding: 8px;
    /* Make ul horizontal */
    display: inline;
}
.navListItem a{
    text-decoration: none;
    color: rgb(207, 183, 230);
}
.navListItem:hover{
    /* Underline link when hovering. */
    text-decoration: underline rgb(207, 183, 230) 4px;
}

/* Larger than 350px devices. */
@media screen and (min-width: 351px) {
    /* Nav bar */
    /* Set nav bar to stay at top */
    .mainNav{
        position: fixed;
        width: 100%;
    }
    .navListItem a{
        font-size: 1.2em;
    }
}
/* Devices 800px and larger. */
@media screen and (min-width: 701px) {
    /* Nav bar */
    /* Move nav bar to the side and change ul back to vertical */
    .mainNav{
        top: 0;
        left: 0;
        width: 175px;
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .navListItem{
        display: flex;
    }
    .navListItem a{
        font-size: 1.5em;
    }
}

